# connectedhomeip

config/esp32/components/chip/: CMakeLists.txt  Kconfig
config/esp32/components/chip/app/: AppBuildConfig.h.in
config/esp32/components/chip/core/: CHIPBuildConfig.h.in
config/esp32/components/chip/include/app/: AppBuildConfig.h.in
config/esp32/components/chip/include/core/: CHIPBuildConfig.h.in
config/esp32/components/chip/include/lwip/: lwip_buildconfig.h.in
config/esp32/components/chip/include/matter/tracing/: build_config.h.in
config/esp32/components/chip/include/system/: SystemBuildConfig.h.in
config/esp32/components/chip/platform/: CHIPDeviceBuildConfig.h
config/esp32/components/matter/: CMakeLists.txt  ota-image.cmake
config/esp32/components/matter/include/: CHIPVersion.h.in
config/esp32/components/matter/include/app/: AppBuildConfig.h.in
config/esp32/components/matter/include/asn1/: ASN1OID.h.in
config/esp32/components/matter/include/ble/: BleBuildConfig.h.in
config/esp32/components/matter/include/crypto/: CryptoBuildConfig.h.in
config/esp32/components/matter/include/inet/: InetBuildConfig.h.in
config/esp32/components/matter/include/matter/tracing/: build_config.h.in
config/esp32/components/matter/include/platform/: CHIPDeviceBuildConfig.h.in
config/esp32/components/matter/include/setup_payload/: CHIPAdditionalDataPayloadBuildConfig.h.in
examples/lighting-app/esp32/: sdkconfig.defaults.esp32c6
examples/lighting-app/esp32/main/: CMakeLists.txt
examples/lighting-app/lighting-common/: lighting-app.matter  lighting-app.zap
examples/platform/esp32/common/: Esp32AppServer.cpp
examples/platform/esp32/external_platform/ESP32_custom/: BUILD.gn
src/app/clusters/network-commissioning/: network-commissioning.cpp
src/app/server/: Server.h
src/controller/: CHIPDeviceController.cpp
src/platform/ESP32/: BUILD.gn  ConnectivityManagerImpl_WiFi.cpp  ESP32Utils.cpp  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver_Ethernet.cpp
src/python_testing/: TC_CNET_4_23.py
